--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-/node_modules
-/docs/.vitepress/cache
-/docs/.vitepress/dist
-/docs/.vitepress/.temp
+node_modules
+docs/.vitepress/cache
+docs/.vitepress/dist
+docs/.vitepress/.temp
+
+.vitepress/cache
+.vitepress/dist
+.vitepress/.temp
+
+copylocation
