--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "vitepress build docs && node ./script/afterBuild.js",
     "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
@@ -17,6 +16,7 @@
     "vitepress": "1.0.0-rc.24"
   },
   "dependencies": {
+    "sass": "^1.69.5",
     "tdesign-vue-next": "^1.6.5",
     "vue": "^3.3.7"
   }
