--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.9",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
     "vitepress": "1.0.0-rc.24"
   },
   "dependencies": {
