--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs && node ./script/afterBuild.js",
+    "docs:build:gitee": "cross-env LOAD_ENV=gitee_page vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.9",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vitepress": "1.0.0-rc.24"
