--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs && node ./script/afterBuild.js",
     "docs:build:gitee": "cross-env LOAD_ENV=gitee_page vitepress build docs",
+    "docs:build:server": "cross-env LOAD_ENV=server vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
