--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"types": ["node"]
 	},
 	"include": ["env.d.ts", "./docs/.vitepress/**/*"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "**/some_dir_like_node_modules/*"]
 }
