--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "docs:build:gitee": "cross-env LOAD_ENV=gitee_page vitepress build docs",
     "docs:build:server": "cross-env LOAD_ENV=server vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "push:server": "npm run docs:build:server && PSA send doc",
-    "commit": "git add . && git commit -m \"update docs\" && git push"
+    "push": "git add . && git commit -m \"update docs\" && git push",
+    "push:server": "npm run docs:build:server && fs send doc"
   },
   "keywords": [],
   "author": "",
