--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,12 @@
     }
   },
   "cSpell.words": [
+    "gitee",
     "instanceof",
     "minmax",
-    "typeof"
+    "tdesign",
+    "typeof",
+    "unplugin",
+    "vitepress"
   ]
 }
