--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules
 docs/.vitepress/cache
 docs/.vitepress/dist
 docs/.vitepress/.temp
+docs/.vitepress/auto-imports.d.ts
+docs/.vitepress/components.d.ts
 
 .vitepress/cache
 .vitepress/dist
