--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "tdesign-vue-next": "^1.10.2",
+    "vite": "5.4.8",
     "vue": "^3.5.12"
-  }
+  },
+  "packageManager": "pnpm@9.12.3"
 }
