--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
 		},
 		"types": ["node"]
 	},
-	"exclude": ["node_modules"]
+	"include": ["docs/.vitepress/**/*.ts", "docs/.vitepress/**/*.d.ts"]
 }
