--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "fast-glob": "^3.3.2",
     "markdown-it-mathjax3": "^4.3.2",
     "sass": "^1.80.4",
     "unplugin-auto-import": "^0.16.7",
