--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "vitepress dev",
+    "dev": "vitepress dev --mode dev",
     "build": "vitepress build",
     "preview": "vitepress preview",
-	"type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "dotenv": "^16.4.6",
+    "minimist": "^1.2.8",
     "vitepress": "^1.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
     "typescript": "^5.7.2",
     "vue-tsc": "^2.1.10"
