--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
-    "cSpell.words": [
-        "vitepress"
-    ]
+  "[markdown]": {
+    "editor.quickSuggestions": {
+      "other": "on",
+      "comments": "on",
+      "strings": "on"
+    }
+  },
+  "cSpell.words": [
+    "gitee",
+    "instanceof",
+    "minmax",
+    "rgba",
+    "tdesign",
+    "typeof",
+    "unplugin",
+    "vitepress",
+    "vuex"
+  ]
 }
