--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
     "typescript": "^5.7.2",
+    "vite": "^5.4.11",
     "vue-tsc": "^2.1.10"
   },
   "packageManager": "pnpm@9.12.3"
