--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.6",
+    "markdown-it-mathjax3": "^4.3.2",
     "minimist": "^1.2.8",
     "vitepress": "^1.5.0",
     "vue": "^3.5.13"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
+    "sass": "^1.82.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vue-tsc": "^2.1.10"
