--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
+    "fast-glob": "^3.3.2",
     "sass": "^1.82.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
