--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 # vitepress build output
 .vitepress/dist
 .vitepress/cache
+.vitepress/.temp
 
 # dotenv environment variables file
 .env
