添加DemoIframe组件及全局组件声明

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
       "@theme/*": [".vitepress/theme/*"]
     }
   },
-  "include": ["env.d.ts", "src/**/*", ".vitepress/**/*"]
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    ".vitepress/**/*",
+    "global-components.d.ts"
+  ]
 }
