添加Vite配置及优化关于页链接

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
         env:
           BASE_URL: /doc
           COPYRIGHT: Copyright © 2022-present <a href="https://github.com/xiangheng08" target="_blank" class="copyright-link">xiangheng08</a>
+          VITE_REPOSITORY_URL: https://github.com/xiangheng08/doc
+          VITE_ISSUES_URL: https://github.com/xiangheng08/doc/issues
+          VITE_PR_URL: https://github.com/xiangheng08/doc/pulls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
