feat(ts): 添加getErrorMessage函数及优化VSCode设置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,9 +19,10 @@
     "rgba",
     "tdesign",
     "typeof",
+    "unobserve",
     "unplugin",
+    "vite",
     "vitepress",
-    "vuex",
-    "vite"
+    "vuex"
   ]
 }
