--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "dotenv": "^16.4.6",
-    "markdown-it-mathjax3": "^4.3.2",
     "medium-zoom": "^1.1.0",
-    "minimist": "^1.2.8",
-    "vitepress": "^1.6.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/markdown-it-container": "^2.0.10",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
+    "dotenv": "^16.4.6",
     "fast-glob": "^3.3.2",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-mathjax3": "^4.3.2",
+    "minimist": "^1.2.8",
     "sass": "^1.82.0",
     "typescript": "^5.7.2",
+    "vitepress": "^1.6.3",
     "vue-tsc": "^2.1.10"
   },
   "packageManager": "pnpm@9.12.3"
