build: 添加 .vitepress/dist 目录的文件分析器
- 在 package.json 中添加 dist-analyzer 脚本
- 新增 dist-analyzer.js 文件，实现文件大小分析和统计
- 使用 fast-glob、fs 和 path 模块进行文件搜索和大小计算
- 输出文件大小排名和总大小信息

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vitepress build",
     "build:no-search": "vitepress build --no-search",
     "preview": "vitepress preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "dist-analyzer": "node scripts/dist-analyzer.js"
   },
   "dependencies": {
     "medium-zoom": "^1.1.0",
