docs(vitepress): 添加代码块图标插件并更新相关文档
- 在 config.ts 中集成 groupIconMdPlugin 和 groupIconVitePlugin
- 在 theme/index.ts 中引入 group-icons.css
- 更新 sidebar/vitepress.ts，添加新的文档链接
- 新增 group-icons.md 文档，介绍代码块图标的使用方法
- 重命名 error.md 为 issues.md，整理常见问题及解决方案

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.82.0",
     "typescript": "^5.7.2",
     "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.6.0",
     "vue-tsc": "^2.1.10"
   },
   "packageManager": "pnpm@9.12.3"
