docs(js): 添加 JavaScript 运行时相关文档
- 在 .vitepress/sidebar/js.ts 中添加了新的 sidebar 项 'JS 运行时'
- 在 .vscode/settings.json 中设置了编辑器字体和启用字形连写
- 新增 src/js/runtime.md 文件，详细介绍了当前主流的 JavaScript 运行时

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "editor.fontFamily": "Consolas, 'Courier New', monospace",
+  "editor.fontLigatures": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
   },
