feat(nodejs): 添加环境变量读取和验证功能
- 新增 read-env 目录，包含 .env 文件和配置读取代码
- 在 package.json 中添加 envalid 和 ms 依赖
- 更新 .gitignore 文件，规范 .env 文件忽略规则
- 在 sidebar 中添加新功能的链接

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ node_modules
 .vitepress/.temp
 
 # dotenv environment variables file
-.env
-.env.*
-!.env.example
+/.env
+/.env.*
+/!.env.example
 template.md
 template.ts
