--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dist-analyzer": "node scripts/dist-analyzer.js"
   },
   "dependencies": {
+    "echarts": "^5.6.0",
     "envalid": "^8.0.0",
     "medium-zoom": "^1.1.0",
     "ms": "^2.1.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3"
   },
   "devDependencies": {
     "@types/markdown-it-container": "^2.0.10",
