build: 更新 tsconfig.json 排除目录
- 在 tsconfig.json 中添加 exclude 配置项
- 排除 node_modules 和 .vitepress/dist 目录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,9 @@
     "src/**/*",
     ".vitepress/**/*",
     "global-components.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    ".vitepress/dist"
   ]
 }
