docs(nodejs): 更新 async_hooks 文档
- 修正代码示例中的链接格式问题
- 统一使用反引号标记代码
- 调整部分术语的翻译

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ node_modules
 /.env
 /.env.*
 /!.env.example
+
+# misc
 template.md
 template.ts
 *.temp
 *.temp.js
+.vitepress/config.ts.timestamp-*.mjs
