--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
     "vue-echarts": "^7.0.3"
   },
   "devDependencies": {
+    "@koa/router": "^14.0.0",
+    "@types/koa": "^3.0.0",
+    "@types/koa__router": "^12.0.4",
     "@types/markdown-it-container": "^2.0.10",
     "@types/minimist": "^1.2.5",
     "@types/ms": "^2.1.0",
     "@types/node": "^22.10.1",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "dotenv": "^16.4.6",
     "fast-glob": "^3.3.2",
+    "koa": "^3.0.3",
     "markdown-it-container": "^4.0.0",
     "markdown-it-mathjax3": "^4.3.2",
     "minimist": "^1.2.8",
     "sass": "^1.82.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.7.2",
     "vitepress": "^1.6.3",
     "vitepress-plugin-group-icons": "^1.6.0",
