--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@koa/router": "^14.0.0",
     "@types/koa": "^3.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-container": "^2.0.10",
     "@types/minimist": "^1.2.5",
     "@types/ms": "^2.1.0",
@@ -34,6 +35,7 @@
     "dotenv": "^16.4.6",
     "fast-glob": "^3.3.2",
     "koa": "^3.0.3",
+    "lodash-es": "^4.17.21",
     "markdown-it-container": "^4.0.0",
     "markdown-it-mathjax3": "^4.3.2",
     "minimist": "^1.2.8",
