--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "markdown-it-container": "^4.0.0",
     "markdown-it-mathjax3": "^4.3.2",
     "minimist": "^1.2.8",
+    "rolldown": "1.0.0-beta.45",
     "sass": "^1.82.0",
     "tsx": "^4.20.6",
     "typescript": "^5.7.2",
