refactor(env): 重构环境变量加载逻辑
将原有的 dotenv 加载方式替换为 VitePress 提供的 loadEnv 方法，
统一管理以 `APP_` 为前缀的环境变量。同时更新相关配置文件中
对环境变量的引用方式，确保构建与运行时的一致性。

此外，移除了不再使用的注释代码和冗余逻辑，提升代码可维护性。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Build with VitePress
         run: pnpm build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
         env:
-          BASE_URL: /doc
-          COPYRIGHT: Copyright © 2022-present <a href="https://github.com/xiangheng08" target="_blank" class="copyright-link">xiangheng08</a>
+          APP_BASE_URL: /doc/
+          APP_COPYRIGHT: Copyright © 2022-present <a href="https://github.com/xiangheng08" target="_blank" class="copyright-link">xiangheng08</a>
           VITE_REPOSITORY_URL: https://github.com/xiangheng08/doc
           VITE_ISSUES_URL: https://github.com/xiangheng08/doc/issues
           VITE_PR_URL: https://github.com/xiangheng08/doc/pulls
