--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-BASE_URL=/doc
-COPYRIGHT=© 2022, All Rights Reserved
+APP_BASE_URL=/doc
+APP_COPYRIGHT=© 2022, All Rights Reserved
 VITE_REPOSITORY_URL=https://github.com/xiangheng08/doc
 VITE_ISSUES_URL=https://github.com/xiangheng08/doc/issues
 VITE_PR_URL=https://github.com/xiangheng08/doc/pulls
