feat(ui): 添加 Element Plus 主题颜色生成器功能
新增了一个用于生成 Element Plus 主题色 CSS 变量的工具组件，支持明暗模式下的颜色变换。该功能依赖 `css-color-function` 库实现颜色计算，并在 UI 中提供了实时预览和代码生成功能。同时更新了相关类型定义、侧边栏导航以及项目依赖配置。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "env.d.ts",
     "src/**/*",
     ".vitepress/**/*",
-    "global-components.d.ts"
+    "global-components.d.ts",
+    "css-color-function.d.ts"
   ],
   "exclude": [
     "node_modules",
