--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dist-analyzer": "node scripts/dist-analyzer.js"
   },
   "dependencies": {
+    "css-color-function": "^1.3.3",
     "echarts": "^5.6.0",
     "envalid": "^8.0.0",
     "medium-zoom": "^1.1.0",
